# 1.02.06 (72389) Mar 4, 2013
# 1.02.05 (72381) Mar 3, 2013
# 1.02.04 (72377) Mar 1, 2013
# 1.02.03 (72374) Mar 1, 2013
Home screen improvements
# 1.02.02 (72362) Mar 1, 2013
Switched to a branch for level-selection & tab mockup development for mobile/touch devices
Re-enabled clouds for next deploy
# 1.02.01 (72256) Feb 21, 2013
Created a development version without clouds
# 1.02.00 (72090) Feb 8, 2013
> Changed the simulation speed and max object speed to make extreme forces easier to visualize
# 1.01.03 (72078) Feb 7, 2013
Increased the max speed by a factor of 2
# 1.01.02 (72075) Feb 7, 2013
Increased simulation speed from 1/4 to 1/2 of original
# 1.01.01 (72073) Feb 7, 2013
Decreased simulation speed without changing clock rate
# 1.01.00 (72071) Feb 7, 2013
Updated screenshot
> Added a new tab "Acceleration Lab"
# 1.00.12 (72049) Feb 7, 2013
Increased the clock speed by a factor of 4 to undo the problems introduced in 1.00.10
# 1.00.11 (72044) Feb 7, 2013
Temporarily remove clouds as a performance test
# 1.00.10 (71855) Jan 24, 2013
Tabs 2-4: Slow down the clock by a factor of 4 to make extreme forces easier to visualize
# 1.00.09 (71849) Jan 24, 2013
Fixed a bug that prevented the mystery object from moving when it was the single item in a stack
# 1.00.08 (71813) Jan 21, 2013
Improved location of "sum of forces" text location to move it away from the accelerometer
# 1.00.07 (71780) Jan 17, 2013
If the stack is too high (contains 2 objects and one is fridge or man), move the sensors to the side
Added labels for "-20" "20" under the tickmarks of the accelerometer
Changed "0" under accelerometer from 12 point font to 15 point font
Space things more evenly in the "acceleration" tab
Added a handle to the water bucket
# 1.00.06 (71754) Jan 16, 2013
Speed up water responsiveness
Fixed: Bucket water shouldn't move while in the toolbox
Improved the water color
The bucket is so big that it should replace both the trash can and the gift on the acceleration tab.