@@ -1,3 +1,4 @@
+Made the PhET Logo non-clickable and added "PhET Homepage" to the popup menu 
 # 1.02.06 (72389) Mar 4, 2013
 # 1.02.05 (72381) Mar 3, 2013
 # 1.02.04 (72377) Mar 1, 2013
